# Q1_25_Builder_OkarFabianTheWise

airdrop/: airdrop.ts  change.ts  enroll.ts  keygen.ts  package.json  transfer.ts
airdrop/programs/: Turbin3_prereq.ts
amm/: Anchor.toml
amm/programs/amm/src/: lib.rs
capstone-project/tokenflowzy/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  webpack.config.js
capstone-project/tokenflowzy-fee-vault/: Anchor.toml  dump.txt
capstone-project/tokenflowzy-fee-vault/programs/token-vault/: Cargo.toml
capstone-project/tokenflowzy-fee-vault/tests/: token-vault.ts
capstone-project/tokenflowzy/src/: App.tsx  index.css
capstone-project/tokenflowzy/src/components/: Footer.tsx  Generator.tsx  Header.tsx  Howto.tsx  ParticleBackground.tsx  TokenExtensions.tsx  TokenInfoForm.tsx  met.tsx
capstone-project/tokenflowzy/src/polyfills/: os.ts
capstone-project/tokenflowzy/src/solactions/: WalletConnect.tsx  createToken.ts  metadata.ts  tokenv2.ts  transferfee.ts
escrow/: Anchor.toml
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: lib.rs
marketplace/: Anchor.toml
marketplace/programs/marketplace/: Cargo.toml
rs_prereq/: Cargo.toml
rs_prereq/src/: lib.rs
rs_prereq/src/programs/: Turbin3_prereq.rs  mod.rs
solana-starter/: package.json
solana-starter/capstone/: letter_of_intent.md  user_stories.md
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
vault/: Anchor.toml
(+21 files in other folders)
