[package]
name = "turbine"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.15.2" 
solana-client = "1.15.2"
lazy_static = "1.4"
solana-program = "1.15.2"
borsh = "0.10.3" 
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }


[profile.test]
incremental = false